@startuml

title __QUIZMULTI's Class Diagram__\n

  namespace QuizModule {
    namespace QuizMulti {
      class QuizModule.QuizMulti.QuestionMulti {
          - alternatives : ArrayList<String>
          - category : String
          - correctAnswer : String
          - question : String
          + QuestionMulti()
          + getAlternatives()
          + getCategory()
          + getCorrectAnswer()
          + getDifficulty()
          + getQuestion()
          + getType()
          + setAlternatives()
          + setCategory()
          + setCorrectAnswer()
          + setDifficulty()
          + setQuestion()
          + setType()
      }
    }
  }
  

  namespace QuizModule {
    namespace QuizMulti {
      class QuizModule.QuizMulti.QuizMulti {
          - answered : Boolean
          - channel : TextChannel
          - correctUser : User
          - defaultUrl : String
          - eb : EmbedBuilder
          - isRunning : boolean
          - questions : LinkedList<QuestionMulti>
          - thread : Thread
          - working : Boolean
          + QuizMulti()
          + QuizMulti()
          + checkAnswer()
          + getQuestion()
          + getQuestionType()
          + isAlive()
          + run()
          + setDatabaseConnection()
          + setTextChannel()
          + start()
          + stop()
          - getAlternatives()
          - limitChat()
          - pollQuestion()
          - postCorrectAnswer()
          - postMessage()
          - resetData()
      }
    }
  }
  

  namespace QuizModule {
    namespace QuizMulti {
      class QuizModule.QuizMulti.QuizMultiParser {
          - jQuiz : JSONObject
          - json : String
          - parsedQuestions : LinkedList<QuestionMulti>
          - responseCode : int
          + QuizMultiParser()
          + createQuestion()
          + fixFormat()
          + getQuestions()
      }
    }
  }
  

  QuizModule.QuizMulti.QuestionMulti o-- QuizModule.QuizMulti.enums.QuizDifficulty : difficulty
  QuizModule.QuizMulti.QuestionMulti o-- QuizModule.QuizMulti.enums.QuizType : type
  QuizModule.QuizMulti.QuizMulti .up.|> java.lang.Runnable
  QuizModule.QuizMulti.QuizMulti o-- QuizModule.QuizMulti.QuestionMulti : currentQuestion
  QuizModule.QuizMulti.QuizMulti o-- QuizModule.QuizSQLConnector : dbConnection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
